  - "sticker find" supports sort and window parameter and new sticker compare operators "eq", "lt", "gt", "contains" and "starts_with"
  - consume only idle flags that were subscribed to
  - volume command is no longer deprecated
  - new "available" and "reset" subcommands for tagtypes
  - searching stored playlists respond now with song position
* database
  - attribute "added" shows when each song was added to the database
  - fix integer overflows with 64-bit inode numbers
  - proxy: require MPD 0.21 or later
  - proxy: require libmpdclient 2.15 or later
* archive
  - add option to disable archive plugins in mpd.conf
* storage
  - curl: optimize database update
  - nfs: require libnfs 4.0 or later
  - nfs: support libnfs 6 (API version 2)
  - nfs: support libnfs URL arguments
* input
  - alsa: limit ALSA buffer time to 2 seconds
  - alsa: set up a channel map
  - alsa: support the alsa-lib 1.2.11 API
  - alsa: add option "close_on_pause"
  - curl: add "connect_timeout" configuration
* decoder
  - ffmpeg: require FFmpeg 4.0 or later
  - ffmpeg: query supported demuxers at runtime
  - hybrid_dsd: remove
  - mpg123: prefer over "mad"
  - mpg123: support streaming
  - opus: implement bitrate calculation
  - sidplay: require libsidplayfp (drop support for the original sidplay)
  - wavpack: require libwavpack version 5
  - fix MixRamp bug
* filter
  - ffmpeg: fix for filters producing no output
* resampler
  - soxr: require libsoxr 0.1.2 or later
* player
  - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
  - "one-shot" consume mode
* tags
  - new tags "TitleSort", "Mood", "ShowMovement"
* output
  - add option "always_off"
  - alsa: require alsa-lib 1.1 or later
  - pipewire: map tags "Date" and "Comment"
* switch to C++20
  - GCC 10 or clang 11 (or newer) recommended
* static partition configuration
* Windows
  - build with libsamplerate
  - remove JACK DLL support
* remove Haiku support
* remove macOS support
* remove Boost dependency