@@ -16,18 +16,32 @@ void
 printAudioDevices(Response &r, const MultipleOutputs &outputs)
 {
 	for (unsigned i = 0, n = outputs.Size(); i != n; ++i) {
-		const auto &ao = outputs.Get(i);
+		printAudioDevice(r, outputs, i, true);
+	}
+}
 
-		r.Fmt(FMT_STRING("outputid: {}\n"
-				 "outputname: {}\n"
-				 "plugin: {}\n"
-				 "outputenabled: {}\n"),
-		      i,
-		      ao.GetName(), ao.GetPluginName(),
-		      (unsigned)ao.IsEnabled());
+void
+printAudioDevice(Response &r, const MultipleOutputs &outputs, unsigned idx, bool attributes)
+{
+	const auto &ao = outputs.Get(idx);
 
+	r.Fmt(FMT_STRING("outputid: {}\n"
+				"outputname: {}\n"
+				"plugin: {}\n"
+				"outputenabled: {}\n"),
+		idx,
+		ao.GetName(), ao.GetPluginName(),
+		(unsigned)ao.IsEnabled());
+	if (attributes)
 		for (const auto &[attribute, value] : ao.GetAttributes())
 			r.Fmt(FMT_STRING("attribute: {}={}\n"),
-			      attribute, value);
+				attribute, value);
+}
+
+void
+printAudioDeviceList(Response &r, const MultipleOutputs &outputs)
+{
+	for (unsigned i = 0, n = outputs.Size(); i != n; ++i) {
+		printAudioDevice(r, outputs, i, false);
 	}
 }
